--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         </nav>
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section id="best"></section>
+        <section id="campaña"></section>
+        <section id="novedades">
+            <article id="delicadeza"></article>
+            <article id="madrid"></article>
+        </section>
     </main>
     <footer></footer>
 </body>
