--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
+        <img src="recursos/logo">
+        <h1>PERFUMES</h1>
         <nav>
             <ul>
-                <li><a href="">MUJERe</a></li>
+                <li><a href="">MUJER</a></li>
                 <li><a href="">HOMBRE</a></li>
                 <li><a href="">LOUWE X ON</a></li>
                 <li><a href="">REGALOS</a></li>
