cambio carrusel(no terminado)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,67 @@
         </nav>
     </header>
     <main>
+        <div class="carrusel">
+            <ol class="rectangulo">
+                <li class="col offset">
+                    <article class="card-1">
+                        <div class="contenido_secciones">
+                            <img src="recursos/001.png"></img>
+                            <h3>001</h3>
+                        </div>
+                    </article>
+                </li>
+                <li class="col">
+                    <article class="card-2"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col">
+                    <article class="card-3"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col">
+                    <article class="card-4"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col">
+                    <article class="card-5"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col">
+                    <article class="card-6"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col">
+                    <article class="card-7"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+                <li class="col order-last">
+                    <article class="card-8"></article>
+                    <div class="contenido_secciones">
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
+                    </div>
+                </li>
+            </ol>
+        </div>
         <section></section>
         <section></section>
         <section></section>
