cambio carrusel(no terminado)

--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
-        <div class="container">
-        <video width="640" height="360" loop controls autoplay muted="muted">
-            <source src="recursos/loewevideo.mp4" type="video/mp4">
-        </video>
-        </div>
     </header>
     <main>
-        <section id="tipos">
-        <div class="container">
-            <ol class="row">
+        <div class="carrusel">
+            <ol class="rectangulo">
                 <li class="col offset">
                     <article class="card-1">
                         <div class="contenido_secciones">
@@ -49,50 +43,50 @@
                 <li class="col">
                     <article class="card-3"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/aire.png"></img>
-                        <h3>Aire</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-4"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Aura.png"></img>
-                        <h3>Aura</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-5"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Earth.png"></img>
-                        <h3>Earth</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-6"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/ibiza.png"></img>
-                        <h3>Ibiza</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-7"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/paseo.png"></img>
-                        <h3>Paseo</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
                 <li class="col order-last">
                     <article class="card-8"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/solo.png"></img>
-                        <h3>Solo</h3>
+                        <img src="recursos/Agua.png"></img>
+                        <h3>Agua</h3>
                     </div>
                 </li>
             </ol>
         </div>
-    </section> 
-    <div></div>
-      
+        <section></section>
+        <section></section>
+        <section></section>
     </main>
     <footer></footer>
 </body>
