cambios- no terminado - carrusel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
     <main>
+        <section id="tipos">
         <div class="carrusel">
             <ol class="rectangulo">
                 <li class="col offset">
@@ -84,6 +85,7 @@
                 </li>
             </ol>
         </div>
+    </section>
         <section></section>
         <section></section>
         <section></section>
