--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
+        <video width="640" height="360" loop controls autoplay muted="muted">
+            <source src="recursos/loewevideo.mp4" type="video/mp4">
+            <p>Video sobre naturaleza</p>
+        </video>
     </header>
     <main>
         <section id="best"></section>
