carrusel_img_terminado

--- a/index.html
+++ b/index.html
@@ -44,43 +44,43 @@
                 <li class="col">
                     <article class="card-3"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/aire.png"></img>
+                        <h3>Aire</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-4"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/Aura.png"></img>
+                        <h3>Aura</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-5"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/Earth.png"></img>
+                        <h3>Earth</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-6"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/ibiza.png"></img>
+                        <h3>ibiza</h3>
                     </div>
                 </li>
                 <li class="col">
                     <article class="card-7"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/paseo.png"></img>
+                        <h3>Paseo</h3>
                     </div>
                 </li>
                 <li class="col order-last">
                     <article class="card-8"></article>
                     <div class="contenido_secciones">
-                        <img src="recursos/Agua.png"></img>
-                        <h3>Agua</h3>
+                        <img src="recursos/solo.png"></img>
+                        <h3>Solo</h3>
                     </div>
                 </li>
             </ol>
