--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <article class="card-6"></article>
                     <div class="contenido_secciones">
                         <img src="recursos/ibiza.png"></img>
-                        <h3>ibiza</h3>
+                        <h3>Ibiza</h3>
                     </div>
                 </li>
                 <li class="col">
