--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section id="tipos">
         <div class="carrusel">
-            <ol class="rectangulo">
+            <ol class="container">
                 <li class="col offset">
                     <article class="card-1">
                         <div class="contenido_secciones">
