--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </header>
     <main>
         <section id="tipos">
-        <div class="carrusel">
-            <ol class="container">
+        <div class="container">
+            <ol class="row">
                 <li class="col offset">
                     <article class="card-1">
                         <div class="contenido_secciones">
