--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <section class="content">
         <img src="recursos/logo">
         <h1>PERFUMES</h1>
         <nav>
@@ -21,14 +22,12 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
-        <video width="640" height="360" loop controls autoplay muted="muted">
-            <source src="recursos/loewevideo.mp4" type="video/mp4">
-        </video>
+    </section>
     </header>
     <main>
         <section id="tipos">
-        <div class="container">
-            <ol class="row">
+        <div class="carrusel">
+            <ol class="rectangulo">
                 <li class="col offset">
                     <article class="card-1">
                         <div class="contenido_secciones">
