--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
+        <div class="container">
         <video width="640" height="360" loop controls autoplay muted="muted">
             <source src="recursos/loewevideo.mp4" type="video/mp4">
         </video>
+        </div>
     </header>
     <main>
         <section id="tipos">
