--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
-        <div class="container">
+        <div class="video">
         <video width="640" height="360" loop controls autoplay muted="muted">
             <source src="recursos/loewevideo.mp4" type="video/mp4">
         </video>
