--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header>
-        <img src="recursos/logo">
+        <div class="container-1">
+        <div class="centrar"> 
+        <img id="logo" src="recursos/logo">
+        </div>
+        
         <h1>PERFUMES</h1>
         <nav>
             <ul>
@@ -22,11 +26,16 @@
                 <li><a href="">STORIES</a></li>
             </ul>
         </nav>
-        <div class="container">
-        <video width="640" height="360" loop controls autoplay muted="muted">
-            <source src="recursos/loewevideo.mp4" type="video/mp4">
-        </video>
+         
         </div>
+
+            <div class="embed-responsive embed-responsive-16by9">
+                <video class="embed-responsive-item" loop controls autoplay muted="muted">
+                    <source src="recursos/loewevideo.mp4" type="video/mp4">
+                     <img id="alternative" src="recursos/alternative.jpg">
+                </video>
+             </div>
+
     </header>
     <main>
         <section id="tipos">
