--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Loewe</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body">
     <header>
@@ -25,7 +28,7 @@
                     </a>
                 </div>
                 <div>
-                    <h1>PERFUMES</h1>
+                    <h1>Perfumes</h1>
                 </div>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
