--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="container-fluid" id="menu">
                 <div>
                     <a class="navbar-brand" href="index.html">
-                        <img src="recursos/logo" alt="Logotipo de Loewe" width="150" class="d-inline-block align-text-top">
+                        <img src="recursos/logo" alt="Logotipo de Loewe" width="100" class="d-inline-block align-text-top">
                     </a>
                 </div>
                 <div>
-                    <h1 id="perfumes">Perfumes</h1>
+                    <h1 id="perfumes">PERFUMES</h1>
                 </div>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
