--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
     </main>
     <footer></footer>
     <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
