--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          
         <div class="container-fluid">
             <div class="embed-responsive embed-responsive-16by9">
-                <video class="embed-responsive-item" loop controls autoplay muted="muted">
+                <video class="embed-responsive-item" loop autoplay muted="muted">
                     <source src="recursos/loewevideo.mp4" type="video/mp4">
                      <img id="alternative" src="recursos/alternative.jpg">
                 </video>
