imagen eliminada+ proceso galería best sellers

--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
     <img src="recursos/perfumes.png">
 
 <div class="galery">
-
+    <div class="box">
+        <img>
+    </div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
+    <div class="box">200px x 200px</div>
 </div>
     </section>
     
