--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@
             </button>
         </div>
     </div>
+
+    <section id="novedades">
+        <header>
+            <h1>Novedades</h1>
+        </header>
+        <div class="container">
+            <article class="borde">
+                <div class="informacion">
+                    <h2 class="subtitulo">Naturaleza innata</h2>
+                    <a class="estilox" href="#">+</a>
+                </div>
+                <img src="_" alt="_">
+            </article>
+            <article class="borde">
+                <img src="_" alt="_">
+                <div class="informacion">
+                    <h2 class="subtitulo">Un paseo por Madrid</h2>
+                    <a class="estilox" href="#">+</a>
+                </div>
+            </article>
+        </div>
+    </section>
 </main>
 
     <footer></footer>
