--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <section id="novedades">
+    <!-- <section id="novedades">
     <h1>Novedades</h1>
         <div class="container">
             <article class="borde">
@@ -141,7 +141,7 @@
                 </div>
             </article>
         </div>
-    </section>
+    </section> -->
 </main>
 
     <footer></footer>
