--- a/index.html
+++ b/index.html
@@ -63,58 +63,78 @@
         </div>
 
     </header>
-       <div class="slider">
-        <div class="card">
-            <img src="recursos/001.png"></img>
-            <h3>001</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/Agua.png"></img>
-            <h3>Agua</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/aire.png"></img>
-            <h3>Aire</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/Earth.png"></img>
-            <h3>Earth</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/ibiza.png"></img>
-             <h3>Ibiza</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/paseo.png"></img>
-            <h3>Paseo</h3>
-        </div>
-        <div class="card">
-            <img src="recursos/solo.png"></img>
-            <h3>Solo</h3>
-        </div>
-        <button id="prev"><</button>
-        <button id="next">></button>
-    </div>
 
     <section id="best_sellers">
-<div class="text">
-    <h2>Best Sellers</h2>
-</div>
+        <div class="text">
+            <h2>Best Sellers</h2>
+        </div>
     <img src="recursos/perfumes.png">
 
-<div class="galery">
-    <div class="box">
-        <img>
+<div id="galery">
+         <div>
+            <div>
+            <h3>Vela pequeña tomato leaves</h3>
+            <p>85,00€</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+            </div>
+        </div>
+        <div>
+            <div>
+            <h3>Vela pequeña Cypress Balls</h3>
+            <p>85,00€</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+            </div>
+        </div>
+        <div>
+            <div>
+            <h3>Vela pequeña Oregano</h3>
+            <p>85,00 €</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+         </div>
+        </div>
+
+        <div>
+        <div>
+            <h3>Tomato Leaves jabón líquido</h3>
+            <p>60,00 €</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+        </div>
+        </div>
+
+        <div>
+        <div>
+            <h3>LOEWE Aire Sutileza 50ml</h3>
+            <p>84,00 €</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+        </div>
     </div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-    <div class="box">200px x 200px</div>
-</div>
+
+    <div>
+        <div>
+            <h3>LOEWE Esencia EDP 50ml</h3>
+            <p>118,00 €</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+        </div>
+    </div>
+
+    <div>
+        <div>
+            <h3>Vela pequeña tomato leaves</h3>
+            <p>85,00€</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+        </div>
+    </div>
+
+    <div>
+        <div>
+            <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
+            <p>89,00€</p>
+            <li class="ver"><a href="#">Ver producto</a></li>
+        </div>
+    </div>
+
+    </div> 
+
     </section>
     
     <!-- <main>
