--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 </head>
 <body">
 <header>       
-    <nav class="navbar navbar-expand-sm justify-content-center">
-        <div class="container-fluid p-0" id="menu">
+    <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
+        <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
             <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src="recursos/logo" alt="Logotipo de Loewe" width="100" class="d-inline-block align-text-top">
+                    <img src="recursos/logo" alt="Logotipo de Loewe" width="150" class="d-inline-block align-text-top pt-4">
                 </a>
             </div>
             <div>
                 <h1 id="perfumes">PERFUMES</h1>
             </div>
-            <div>
+            <div id="encontrar">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+            <div id="navbarNav" class="collapse navbar-collapse blanco-2">
+                <ul id="mdesplegado" class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">LOUWE X ON</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">LOEWE X ON</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    <!-- <section id="novedades">
+    <section id="novedades">
     <h1>Novedades</h1>
         <div class="container">
             <article class="borde">
@@ -141,7 +141,7 @@
                 </div>
             </article>
         </div>
-    </section> -->
+    </section>
 </main>
 
     <footer></footer>
