--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 </header>
 
-<main>
+<main>   
     <div id="sec-carousel" class="carousel slide" data-bs-theme="dark">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#sec-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -122,25 +122,36 @@
             </button>
         </div>
     </div>
-
     <section id="novedades">
-    <h1>Novedades</h1>
-        <div class="container">
-            <article class="borde">
-                <div class="informacion">
-                    <h2 class="subtitulo">Naturaleza innata</h2>
-                    <a class="estilox" href="#">+</a>
+        <div class="card-group">
+            <article class="card text-bg-light border-secondary mb-3">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">Naturaleza innata</h3>
+                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="recursos/bodegon-1.jpg" class="card-img-bottom" alt="Acceso al perfume LOEWE Solo Ella EDP">
+                    </div>
                 </div>
-                <img src="_" alt="_">
             </article>
-            <article class="borde">
-                <img src="_" alt="_">
-                <div class="informacion">
-                    <h2 class="subtitulo">Un paseo por Madrid</h2>
-                    <a class="estilox" href="#">+</a>
+            <article class="card text-bg-light border-secondary mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="recursos/unpaseo.jpg" class="card-img-top" alt="Acceso al perfume LOEWE Un Paseo Por Madrid">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">Un paseo por Madrid</h3>
+                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
+        <h1>Novedades</h1>
     </section>
 </main>
 
