--- a/index.html
+++ b/index.html
@@ -122,6 +122,79 @@
             </button>
         </div>
     </div>
+
+    <section id="best_sellers">
+        <div class="text">
+                <h2>Best Sellers</h2>
+             </div>
+            <img src="recursos/perfumes.png">
+
+        <div id="galery">
+                <div>
+                    <div>
+                    <h3>Vela pequeña tomato leaves</h3>
+                    <p>85,00€</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                    <h3>Vela pequeña Cypress Balls</h3>
+                    <p>85,00€</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                    <h3>Vela pequeña Oregano</h3>
+                    <p>85,00 €</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+                </div>
+
+                <div>
+                <div>
+                    <h3>Tomato Leaves jabón líquido</h3>
+                    <p>60,00 €</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+                </div>
+
+                <div>
+                <div>
+                    <h3>LOEWE Aire Sutileza 50ml</h3>
+                    <p>84,00 €</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <h3>LOEWE Esencia EDP 50ml</h3>
+                    <p>118,00 €</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <h3>Vela pequeña tomato leaves</h3>
+                    <p>85,00€</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
+                    <p>89,00€</p>
+                    <li class="ver"><a href="#">Ver producto</a></li>
+                </div>
+            </div>
+            </div> 
+    </section>
+
+
     <section id="novedades">
         <div class="card-group">
             <article class="card text-bg-light border-secondary mb-3">
@@ -151,8 +224,7 @@
                 </div>
             </article>
         </div>
-        <h1>Novedades</h1>
-   
+        <h1>Novedades</h1>   
     </section>  
 </main>
 
