--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>       
     <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
         <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
-            <div>
+            <div id="divloewe">
                 <a class="navbar-brand" href="index.html">
                     <img src="recursos/logo" alt="Logotipo de Loewe" width="150" class="d-inline-block align-text-top pt-4">
                 </a>
