--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -8,5 +8,101 @@
     <link rel="stylesheet" href="css/style-agua.css">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm justify-content-center">
+            <div class="container-fluid" id="menu">
+                <div>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="recursos/logo" alt="Logotipo de Loewe" width="100" class="d-inline-block align-text-top">
+                    </a>
+                </div>
+                <div>
+                    <h1>PERFUMES</h1>
+                </div>
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">LOUWE X ON</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+        <div class="img">
+             <img src="recursos/fondoagua.png">
+             <div>
+                <h3>AGUA</h3>
+                <p>La primera colección de fragancias para el hogar inspiradas en los jardines botánicos. 
+                    perfume unisex, dinámico y refrescante inspirado en el brillo que proyecta la luz en el agua.</p>
+             </div>
+        </div>
+    </header>
+    <section id="productos">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <img src="recursos/mar de coral.webp">
+                <figcaption>
+                    <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/LOEWE Agua Mar de Coral Eau de Toilette (50Ml).jpg">
+                <figcaption>
+                    <h4>LOEWE Agua Mar de Coral</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/LOEWE Agua Miami 100Ml.jpg">
+                <figcaption>
+                    <h4>LOEWE Agua Miami</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/aguaedtmadera.webp">
+                <figcaption>
+                    <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
+                </figcaption>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-8">
+                <img src="">
+                <figcaption>
+                    <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
+                    <p>110,00 €</p>
+                </figcaption>
+              </div>
+             <div class="col-2"> 
+                <img src="">
+                <figcaption>
+                    <h4>Set Duo Agua</h4>
+                    <p>150,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col-2"> 
+                <img src="">
+                <figcaption>
+                    <h4>Set Duo Agua</h4>
+                    <p>150,00 €</p>
+                </figcaption>
+              </div>
+            </div>
+          </div>
+    </section>
 </body>
 </html>
