--- a/index.html
+++ b/index.html
@@ -12,42 +12,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body">
-<header>       
-    <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
-        <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
-            <div id="divloewe">
-                <a class="navbar-brand" href="index.html">
-                    <img src="recursos/logo" alt="Logotipo de Loewe" width="150" class="d-inline-block align-text-top pt-4">
-                </a>
+<header>
+    <div class="altura">       
+        <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
+            <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
+                <div id="divloewe">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="recursos/logo" alt="Logotipo de Loewe" width="150" class="d-inline-block align-text-top pt-4">
+                    </a>
+                </div>
+                <div>
+                    <h1 id="perfumes">PERFUMES</h1>
+                </div>
+                <div id="encontrar">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div id="navbarNav" class="collapse navbar-collapse blanco-2">
+                    <ul id="mdesplegado" class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">LOEWE X ON</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <h1 id="perfumes">PERFUMES</h1>
-            </div>
-            <div id="encontrar">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div id="navbarNav" class="collapse navbar-collapse blanco-2">
-                <ul id="mdesplegado" class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">MUJER</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">HOMBRE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">LOEWE X ON</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">REGALOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">ARTESANÍA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">STORIES</a></li>
-                </ul>
+        </nav>
+        
+        <div class="container-fluid">
+            <div class="embed-responsive embed-responsive-16by9">
+                <video class="embed-responsive-item" loop autoplay muted="muted">
+                    <source src="recursos/loewevideo.mp4" type="video/mp4">
+                    <img id="alternative" src="recursos/alternative.jpg">
+                </video>
             </div>
         </div>
-    </nav>
-     
-    <div class="container-fluid">
-        <div class="embed-responsive embed-responsive-16by9">
-            <video class="embed-responsive-item" loop autoplay muted="muted">
-                <source src="recursos/loewevideo.mp4" type="video/mp4">
-                 <img id="alternative" src="recursos/alternative.jpg">
-            </video>
-         </div>
     </div>
 </header>
 
@@ -217,9 +219,40 @@
                 </div>
             </article>
         </div>
-        <h1>Novedades</h1>
-   
-    </section>  
+        <h1>Novedades</h1>  
+    </section> 
+
+    <section id="novedades">
+        <div class="card-group">
+            <article class="card text-bg-light border-secondary mb-3">
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">Naturaleza innata</h3>
+                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="recursos/bodegon-1.jpg" class="card-img-bottom" alt="Acceso al perfume LOEWE Solo Ella EDP">
+                    </div>
+                </div>
+            </article>
+            <article class="card text-bg-light border-secondary mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="recursos/unpaseo.jpg" class="card-img-top" alt="Acceso al perfume LOEWE Un Paseo Por Madrid">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">Un paseo por Madrid</h3>
+                            <a class="btn btn-outline-dark btn-sm" href="#">+</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+        <h1>Novedades</h1>  
+    </section>   
 </main>
 
     <footer></footer>
