--- a/producto.html
+++ b/producto.html
@@ -45,11 +45,9 @@
 <main>
     <div class="container miami">
         <h1>LOEWE Agua Miami 50ml</h1>
-        <div>
-            <img src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml">
-            <img src="recursos/compartir.png" alt="Icono para compartir el perfume">
-        </div>
+        <img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml">
     </div>
+    <img id="compartir" src="recursos/compartir.png" alt="Icono para compartir el perfume">
 
     <div class="container text-center">
         <div class="row">
