--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loewe Agua</title>
+    <link rel="icon" type="image/x-icon" href="/recursos/loewe_simbolo.jpeg">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style-agua.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -104,5 +113,36 @@
             </div>
           </div>
     </section>
+    <footer>
+        <div class="ap">
+            <img src="recursos/loewe-logo-cuadrado.webp">
+            <div class="contacto">
+                <ul>
+                    <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Países/regiones de entrega</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Corporate Gifts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Acerca de LOEWE Perfumes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Política ambiental y calidad</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="politicas">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="#">Términos y condiciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Polítia de privacidad</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Formulario de devolución</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Cookies</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Parámetros Cookies</a></li>
+            </ul>
+        </div>
+        <div class="redes">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Facebook</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Youtube</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
