--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
     <section id="best_sellers">
         <div class="text">
-            <h2>Best Sellers</h2>
+            <!-- <h2>Best Sellers</h2>
         </div>
-        <img src="recursos/perfumes.png">
+        <img src="recursos/perfumes.png"> -->
         <div id="galery">
                 <div>
                     <div>
@@ -166,6 +166,7 @@
                     <li class="ver"><a href="#">Ver producto</a></li>
                 </div>
             </div>
+
             <div>
                 <div>
                     <h3>LOEWE Esencia EDP 50ml</h3>
@@ -173,6 +174,7 @@
                     <li class="ver"><a href="#">Ver producto</a></li>
                 </div>
             </div>
+
             <div>
                 <div>
                     <h3>Vela pequeña tomato leaves</h3>
@@ -181,6 +183,7 @@
                 </div>
             </div>
             <div>
+
                 <div>
                     <h3>LOEWE 001 Woman Eau de Parfum 50ml</h3>
                     <p>89,00€</p>
@@ -190,6 +193,7 @@
             </div> 
     </section>
 
+    
     <section id="novedades">
         <div class="card-group">
             <article class="card text-bg-light border-secondary mb-3">
