footer (terminado) y apartado agua(no terminado)

--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -46,7 +46,7 @@
 
             </div>
         </nav>
-        <div class="img">
+        <div class="principal">
              <img src="recursos/fondoagua.png">
              <div>
                 <h3>AGUA</h3>
@@ -56,58 +56,59 @@
         </div>
     </header>
     <section id="productos">
+        <h2>COLECCIÓN AGUA</h2>
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                <img src="recursos/mar de coral.webp">
+                <img src="recursos/agua-EDT.webp">
                 <figcaption>
-                    <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
-                    <p>37,00 €</p>
+                    <h4>LOEWE Agua EDT</h4>
+                    <p>84,00 €</p>
                 </figcaption>
               </div>
               <div class="col">
-                <img src="recursos/LOEWE Agua Mar de Coral Eau de Toilette (50Ml).jpg">
+                <img src="recursos/agua-ella.webp">
+                <figcaption>
+                    <h4>LOEWE Agua Ella</h4>
+                    <p>84,00 €</p>
+                </figcaption>
+              </div>
+              <div class="col">
+                <img src="recursos/mar de coral.webp">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral</h4>
                     <p>84,00 €</p>
                 </figcaption>
               </div>
               <div class="col">
-                <img src="recursos/LOEWE Agua Miami 100Ml.jpg">
+                <img src="recursos/LOEWE Agua Miami 100Ml.jpeg">
                 <figcaption>
-                    <h4>LOEWE Agua Miami</h4>
-                    <p>84,00 €</p>
-                </figcaption>
-              </div>
-              <div class="col">
-                <img src="recursos/aguaedtmadera.webp">
-                <figcaption>
-                    <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
-                    <p>37,00 €</p>
+                    <h4>LOEWE Agua Miami 50ml</h4>
+                    <p>84,00€</p>
                 </figcaption>
               </div>
             </div>
 
             <div class="row">
               <div class="col-8">
-                <img src="">
+                <img src="recursos/cofreAgua.webp">
                 <figcaption>
                     <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
                     <p>110,00 €</p>
                 </figcaption>
               </div>
-             <div class="col-2"> 
-                <img src="">
+             <div class="col-4"> 
+                <img src="recursos/loewe coral madera.webp">
                 <figcaption>
-                    <h4>Set Duo Agua</h4>
-                    <p>150,00 €</p>
+                    <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
                 </figcaption>
               </div>
-              <div class="col-2"> 
-                <img src="">
+              <div class="col-4"> 
+                <img src="recursos/aguaedtmadera.webp">
                 <figcaption>
-                    <h4>Set Duo Agua</h4>
-                    <p>150,00 €</p>
+                    <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
+                    <p>37,00 €</p>
                 </figcaption>
               </div>
             </div>
