--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
     <section id="best_sellers">
         <div class="text">
-            <!-- <h2>Best Sellers</h2>
+            <h2>Best Sellers</h2>
         </div>
-        <img src="recursos/perfumes.png"> -->
+        <img src="recursos/perfumes.png">
         <div id="galery">
                 <div>
                     <div>
@@ -138,6 +138,7 @@
                     <li class="ver"><a href="#">Ver producto</a></li>
                     </div>
                 </div>
+                
                 <div>
                     <div>
                     <h3>Vela pequeña Cypress Balls</h3>
@@ -145,12 +146,14 @@
                     <li class="ver"><a href="#">Ver producto</a></li>
                     </div>
                 </div>
+
                 <div>
                     <div>
                     <h3>Vela pequeña Oregano</h3>
                     <p>85,00 €</p>
                     <li class="ver"><a href="#">Ver producto</a></li>
                 </div>
+
                 </div>
                 <div>
                 <div>
@@ -158,6 +161,7 @@
                     <p>60,00 €</p>
                     <li class="ver"><a href="#">Ver producto</a></li>
                 </div>
+
                 </div>
                 <div>
                 <div>
@@ -193,7 +197,7 @@
             </div> 
     </section>
 
-    
+
     <section id="novedades">
         <div class="card-group">
             <article class="card text-bg-light border-secondary mb-3">
