añadir-footer-hecho-por-olga

--- a/index.html
+++ b/index.html
@@ -230,7 +230,39 @@
     </section>   
 </main>
 
-    <footer></footer>
+    <footer>
+        <footer>
+            <div class="ap">
+                <img src="recursos/loewe-logo-cuadrado.webp">
+                <div class="contacto">
+                    <ul>
+                        <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Países/regiones de entrega</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Corporate Gifts</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Acerca de LOEWE Perfumes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Política ambiental y calidad</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="politicas">
+                <ul>
+                    <li class="nav-item"><a class="nav-link" href="#">Términos y condiciones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Polítia de privacidad</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Formulario de devolución</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Cookies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Parámetros Cookies</a></li>
+                </ul>
+            </div>
+            <div class="redes">
+                <ul>
+                    <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Facebook</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Youtube</a></li>
+                </ul>
+            </div>
+        </footer>
+    </footer>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/script.js"></script>
 </body>
