página agua completa

--- a/seccion-agua.html
+++ b/seccion-agua.html
@@ -90,21 +90,21 @@
             </div>
 
             <div class="row">
-              <div class="col-8">
-                <img src="recursos/cofreAgua.webp">
+              <div class="col-6">
+                <img src="recursos/cofreagua.png">
                 <figcaption>
                     <h4>Cofre regalo Agua Mar de Coral EDT 100ml</h4>
                     <p>110,00 €</p>
                 </figcaption>
               </div>
-             <div class="col-4"> 
+             <div class="col-3"> 
                 <img src="recursos/loewe coral madera.webp">
                 <figcaption>
                     <h4>LOEWE Agua Mar de Coral Vial 15ML y Funda de Madera</h4>
                     <p>37,00 €</p>
                 </figcaption>
               </div>
-              <div class="col-4"> 
+              <div class="col-3"> 
                 <img src="recursos/aguaedtmadera.webp">
                 <figcaption>
                     <h4>LOEWE Agua EDT 15ML y Funda de Madera</h4>
