--- a/index.html
+++ b/index.html
@@ -137,6 +137,20 @@
     </div> 
 
     </section>
+
+    <section>
+        <div class="naturaleza">
+            <img src="recursos/LOEWE naturaleza.webp">
+            <div>
+               <h3>NATURALEZA Y EMOCIÓN</h3>
+               <h2>botanical rainbow</h2>
+               <p>La nueva campaña de LOEWE está protagonizada por Úrsula Corberó, Greta Lee y Stéphane Bak.</p>
+               <ul>
+                <li class="nav-item"><a class="nav-link" href="#">ver colección</a></li>
+               </ul>
+            </div>
+       </div>
+    </section>
     
     <!-- <main>
         <section id="tipos">
