ultimos-cambios-html-css-producto

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body">
 <header>
-    <div class="altura">       
+    <div class="altura-header">       
         <nav id="blanco" class="navbar navbar-expand-sm justify-content-center">
             <div  id="blancoFijoMenu" class="container-fluid p-0 menuestilo">
                 <div id="divloewe">
