--- a/producto.html
+++ b/producto.html
@@ -43,43 +43,67 @@
     </nav>
 </header>
 <main>
-    <div class="container miami">
-        <h1>LOEWE Agua Miami 50ml</h1>
-        <img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml">
-    </div>
-    <img id="compartir" src="recursos/compartir.png" alt="Icono para compartir el perfume">
-
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>Conocer</h5>
-                <!-- <p>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.</p>
-                <p>Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.</p>
-                <p>LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.</p>
-                    <br>
-                <p>Tamaños: 50ml, 100nl, 150ml</p> -->
+    <div class="container-fluid">
+        <div class="row gx-4 producto-pan">
+            <div class="col">
+                <div class="container overflow-hidden miami">
+                    <h1>LOEWE Agua Miami 50ml</h1>
+                    <img id="agua" src="recursos/aguamiami.jpeg" alt="Presentación del perfume LOEWE Agua Miami 50ml">
+                    <a id="compartir" href="#"><img src="recursos/compartir.png" alt="Icono para compartir el perfume"></a>
+                </div>
             </div>
-            <div class="col-md-4 ms-auto">
-                <h5>Ingredientes</h5>
-                <!-- <img src="recursos/flecha-vertical.png"> -->
-                <!-- <p>ALCOHOL - PARFUM (FRAGRANCE) - AQUA (WATER) - ETHYLHEXYL METHOXYCINNAMATE - BUTYL METHOXYDIBENZOYLMETHANE - ETHYLHEXYL SALICYLATE - BHT - TOCOPHEROL - LIMONENE - LINALOOL - HYDROXYCITRONELLAL - CITRAL - CITRONELLOL - GERANIOL - ALPHA-ISOMETHYL IONONE - FARNESOL 74% Vol.</p> -->
+            <div class="col">
+                <div class="container text-center">
+                    <div class="row g-0 conocer-ingredientes">
+                        <div class="col-auto me-auto">
+                            <div class="dropdown">
+                                <button type="button" class="btn btn-light btn-sm border border-secondary btn-conocer dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Conocer
+                                </button>
+                                <div class="dropdown-menu p-4 text-body-secondary">
+                                    <p>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.</p>
+                                    <p>Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.</p>
+                                    <p>LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.</p>
+                                    <p>Tamaños: 50ml, 100nl, 150ml.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="dropdown">
+                                <button type="button" class="btn btn-light btn-sm border border-secondary btn-ingredientes dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Ingredientes
+                                </button>
+                                <div class="dropdown-menu">
+                                    <p>ALCOHOL - PARFUM (FRAGRANCE) - AQUA (WATER) - ETHYLHEXYL METHOXYCINNAMATE - BUTYL METHOXYDIBENZOYLMETHANE - ETHYLHEXYL SALICYLATE - BHT - TOCOPHEROL - LIMONENE - LINALOOL - HYDROXYCITRONELLAL - CITRAL - CITRONELLOL - GERANIOL - ALPHA-ISOMETHYL IONONE - FARNESOL 74% Vol.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="espacio"></div>
+                    <div class="row g-0 precio-cuidados">
+                        <div class="col-auto me-auto">
+                            <h5>84,00 €</h5>
+                        </div>
+                        <div class="col-auto">
+                            <h5>Guía de cuidados</h5> 
+                            <!-- <img src="recursos/flecha-vertical.png"> -->
+                            <!-- <p>Conserve su fragancia en un lugar fresco y seco, alejado de una exposición directa a la luz y de toda fuente de calor.</p> -->
+                        </div>                                              
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-auto me-auto">
-                <h5>84,00 €</h5>
-            </div>
-            <div class="col-auto">
-                <h5>Guía de cuidados</h5> 
-                <!-- <img src="recursos/flecha-vertical.png"> -->
-                <!-- <p>Conserve su fragancia en un lugar fresco y seco, alejado de una exposición directa a la luz y de toda fuente de calor.</p> -->
-            </div>                                              
+
+        <div class="enlaces">
+            <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png"></a>
+            <a href="#">Todos los perfumes<img src="recursos/flecha-lateral.png"></a>       
         </div>
     </div>
-
-    <div>
-        <a href="#">Siguiente perfume<img src="recursos/flecha-lateral.png"></a>
-        <a href="#">Regresar<img src="recursos/flecha-lateral.png"></a>       
+    <div class="arbol">
+        <p>LOEWE Agua Miami, la fragancia original, ahora en un nuevo frasco lleno de color formando parte del arcoíris botánico de LOEWE.</p>
+        <p>Inspirada en el brillo que proyecta la luz en un agua que fluye, esta fragancia refrescante y llena de energía de la familia LOEWE Agua combina notas de limón, mandarina y nerolí.</p>
+        <p>LOEWE Agua Miami aparece encapsulado en un frasco en forma de bloque, de cristal traslúcido, de color verde esmeralda que completa el arcoíris de LOEWE Perfumes.</p>
+        <p>Tamaños: 50ml, 100nl, 150ml.</p>
     </div>
 
     <!-- <div class="container text-center">
@@ -98,7 +122,37 @@
     </div> -->
 
 </main>
-<footer></footer>
+<footer>
+    <div class="ap">
+        <img src="recursos/loewe-logo-cuadrado.webp">
+        <div class="contacto">
+            <ul>
+                <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Países/regiones de entrega</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Corporate Gifts</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Acerca de LOEWE Perfumes</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Política ambiental y calidad</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="politicas">
+        <ul>
+            <li class="nav-item"><a class="nav-link" href="#">Términos y condiciones</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Polítia de privacidad</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Formulario de devolución</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Cookies</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Parámetros Cookies</a></li>
+        </ul>
+    </div>
+    <div class="redes">
+        <ul>
+            <li class="nav-item"><a class="nav-link" href="#">Instagram</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Facebook</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Youtube</a></li>
+        </ul>
+    </div>
+</footer>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/script.js"></script>
 </body>
